<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ClientWindow</class>
 <widget class="QWidget" name="ClientWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>658</width>
    <height>324</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Qt Simple Chat Client</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0" colspan="2">
    <widget class="QPushButton" name="connectButton">
     <property name="text">
      <string>ПІД'ЄДНАТИСЯ ДО СЕРВЕРУ</string>
     </property>
    </widget>
   </item>
   <item row="5" column="0">
    <widget class="QLineEdit" name="messageEdit">
     <property name="enabled">
      <bool>false</bool>
     </property>
    </widget>
   </item>
   <item row="5" column="1">
    <widget class="QPushButton" name="sendButton">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="text">
      <string>ВІДПРАВИТИ</string>
     </property>
     <property name="default">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="QListView" name="chatView">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
    </widget>
   </item>
   <item row="2" column="0" rowspan="2">
    <widget class="QPushButton" name="getQuizzesButton">
     <property name="mouseTracking">
      <bool>true</bool>
     </property>
     <property name="text">
      <string>ОТРИМАТИ ТЕСТ</string>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QListWidget" name="quizzesListWidget"/>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
